changes to likes

--- a/QASite.Web/appsettings.json
+++ b/QASite.Web/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConStr": "Data Source=.\\sqlexpress; Initial Catalog=QADB; Integrated Security=true;"
+    "ConStr": "Data Source=.\\sqlexpress; Initial Catalog=QASiteDB; Integrated Security=true;"
   }
 
 }
